--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
   </head>
 
 
-  <body>
+  <body style="background-color:white;color:color">
     <h1> <a href="">hello web </a></h1>
     <p>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </p>
+
+    <p>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12655.25047839523!2d127.0641332352169!3d37.535914142248174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzfCsDMyJzA5LjIiTiAxMjfCsDA0JzIyLjQiRQ!5e0!3m2!1sko!2skr!4v1525585352133" width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </p>
+
     <ol>
       <li><a href="html.html" target="_blank">HTML</a></li>
       <li><a href="css.html">CSS</a></li>
